--- a/index.html
+++ b/index.html
@@ -348,6 +348,13 @@
                         </li>
                     </ul>
                 </div>
+                <div class="contact-us">
+                    <h2 class="contact-us-title">Підпишіться на розсилку</h2>
+                    <form class="contact-us-email" autocomplete="on" novalidate>
+                        <input class="contact-mail" type="email" name="email" required placeholder="E-mail" />
+                        <button class="contact-btn" type="button">Підписатися</button>
+                    </form>
+                </div>
             </div>
         </footer>
         <div class="is-hidden modal-backdrop" data-modal>
@@ -358,31 +365,33 @@
                         <path d="M15 4.10786L13.8921 3L9.5 7.39214L5.10786 3L4 4.10786L8.39214 8.5L4 12.8921L5.10786 14L9.5 9.60786L13.8921 14L15 12.8921L10.6079 8.5L15 4.10786Z" fill="black"/>
                     </svg>
                 </button>
-                <h2>Залиште свої дані, ми вам передзвонимо</h2>
-                <form name="signup_form" autocomplete="on" novalidate>
-                    <label>
-                        Ім'я
-                        <input type="name" name="name" autofocus placeholder="username" required pattern="^[a-zA-Z]+\s[a-zA-Z]+$" title="Username must be two words separated by space."/>
-                    </label>
-                    <label>
-                        Телефон
-                        <input type="tel" name="phone_number" placeholder="+380000000000" required />
-                    </label>
-                    <label>
-                        Пошта
-                        <input type="email" name="email" placeholder="example@gmail.com" required />
-                    </label>
-                    <label>
-                        Коментар
-                        <textarea name="feedback" rows="5" placeholder="Type your message here..."></textarea>
-                      </label>
-                    <label>
-                        <input type="checkbox" name="contract" required />
-                        Погоджуюся з розсилкою та приймаю
-                        <a href="#">Умови договору</a>
-                    </label>
-                  <button type="submit">Відправити</button>
-                  </form>
+                <div class="form-group" role="group" aria-labelledby="contact-details-head">
+                    <h2 id="contact-details-head">Залиште свої дані, ми вам передзвонимо</h2>
+                    <form name="signup_form" autocomplete="on" novalidate>
+                        <label>
+                            Ім'я
+                            <input type="name" name="name" autofocus placeholder="username" required pattern="^[a-zA-Z]+\s[a-zA-Z]+$" title="Username must be two words separated by space."/>
+                        </label>
+                        <label>
+                            Телефон
+                            <input type="tel" name="phone_number" placeholder="+380000000000" required />
+                        </label>
+                        <label>
+                            Пошта
+                            <input type="email" name="email" placeholder="example@gmail.com" required />
+                        </label>
+                        <label>
+                            Коментар
+                            <textarea name="feedback" placeholder="Type your message here..."></textarea>
+                        </label>
+                        <label>
+                            <input type="checkbox" name="contract" required />
+                            Погоджуюся з розсилкою та приймаю
+                            <a href="#">Умови договору</a>
+                        </label>
+                        <button type="submit">Відправити</button>
+                    </form>
+                </div>
             </div>
         </div>
     <script src="./js/modal.js"></script>
