--- a/portfolio.html
+++ b/portfolio.html
@@ -52,8 +52,10 @@
                     <ul class="portfolio-photo">
                         <li class="port-list">
                             <a class="port-link" href="#">
-                                <img class="port-img" src="images/portfolio/img.jpg" alt="leptop" width="370" height="294">
-                                <div class="text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</div>
+                                <div>
+                                    <img class="port-img" src="images/portfolio/img.jpg" alt="leptop" width="370" height="294">
+                                    <div class="text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</div>
+                                </div>
                                 <div class="port-p">
                                     <h3 class="port-title">Технокряк</h3>
                                     <p class="port-text">Веб-сайт</p>
@@ -62,8 +64,10 @@
                         </li>
                         <li class="port-list">
                             <a class="port-link" href="#">
-                                <img class="port-img" src="images/portfolio/img2.jpg" alt="bascketball" width="370" height="294">
-                                <div class="text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</div>
+                                <div>
+                                    <img class="port-img" src="images/portfolio/img2.jpg" alt="bascketball" width="370" height="294">
+                                    <div class="text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</div>
+                                </div>
                                 <div class="port-p">
                                     <h3 class="port-title">Постер New Orlean vs Golden Star</h3>
                                     <p class="port-text">Дизайн</p>
@@ -72,8 +76,10 @@
                         </li>
                         <li class="port-list">
                             <a class="port-link" href="#">
-                                <img class="port-img" src="images/portfolio/img3.jpg" alt="seafood" width="370" height="294">
-                                <div class="text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</div>
+                                <div>
+                                    <img class="port-img" src="images/portfolio/img3.jpg" alt="seafood" width="370" height="294">
+                                    <div class="text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</div>
+                                </div>
                                 <div class="port-p">    
                                     <h3 class="port-title">Ресторан Seafood</h3>
                                     <p class="port-text">Додаток</p>
@@ -82,8 +88,10 @@
                         </li>
                         <li class="port-list">
                             <a class="port-link" href="#">
-                                <img class="port-img" src="images/portfolio/img4.jpg" alt="headphone" width="370" height="294">
-                                <div class="text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</div>
+                                <div>
+                                    <img class="port-img" src="images/portfolio/img4.jpg" alt="headphone" width="370" height="294">
+                                    <div class="text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</div>
+                                </div>
                                 <div class="port-p">
                                     <h3 class="port-title">Проєкт Prime</h3>
                                     <p class="port-text">Маркетинг</p>
@@ -92,8 +100,10 @@
                         </li>
                         <li class="port-list">
                             <a class="port-link" href="#">
-                                <img class="port-img" src="images/portfolio/img5.jpg" alt="boxes" width="370" height="294">
-                                <div class="text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</div>
+                                <div>
+                                    <img class="port-img" src="images/portfolio/img5.jpg" alt="boxes" width="370" height="294">
+                                    <div class="text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</div>
+                                </div>
                                 <div class="port-p">
                                     <h3 class="port-title">Проєкт Boxes</h3>
                                     <p class="port-text">Додаток</p>
@@ -102,8 +112,10 @@
                         </li>
                         <li class="port-list">
                             <a class="port-link" href="#">
-                                <img class="port-img" src="images/portfolio/img6.jpg" alt="imac" width="370" height="294">
-                                <div class="text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</div>
+                                <div>
+                                    <img class="port-img" src="images/portfolio/img6.jpg" alt="imac" width="370" height="294">
+                                    <div class="text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</div>
+                                </div>
                                 <div class="port-p"> 
                                     <h3 class="port-title">Inspiration has no Borders</h3>
                                     <p class="port-text">Веб-сайт</p>
@@ -112,8 +124,10 @@
                         </li>
                         <li class="port-list">
                             <a class="port-link" href="#">
-                                <img class="port-img" src="images/portfolio/img7.jpg" alt="book" width="370" height="294">
-                                <div class="text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</div>
+                                <div>
+                                    <img class="port-img" src="images/portfolio/img7.jpg" alt="book" width="370" height="294">
+                                    <div class="text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</div>
+                                </div>
                                 <div class="port-p">
                                     <h3 class="port-title">Видання Limited Edition</h3>
                                     <p class="port-text">Дизайн</p>
@@ -122,8 +136,10 @@
                         </li>
                         <li class="port-list">
                             <a class="port-link" href="#">
-                                <img class="port-img" src="images/portfolio/img8.jpg" alt="#" width="370" height="294">
-                                <div class="text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</div>
+                                <div>
+                                    <img class="port-img" src="images/portfolio/img8.jpg" alt="#" width="370" height="294">
+                                    <div class="text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</div>
+                                </div>
                                 <div class="port-p">    
                                     <h3 class="port-title">Проєкт LAB</h3>
                                     <p class="port-text">Маркетинг</p>
@@ -132,8 +148,10 @@
                         </li>
                         <li class="port-list">
                             <a class="port-link" href="#">
-                                <img class="port-img" src="images/portfolio/img9.jpg" alt="#" width="370" height="294">
-                                <div class="text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</div>
+                                <div>
+                                    <img class="port-img" src="images/portfolio/img9.jpg" alt="#" width="370" height="294">
+                                    <div class="text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</div>
+                                </div>
                                 <div class="port-p">
                                     <h3 class="port-title">Growing Business</h3>
                                     <p class="port-text">Додаток</p>
