--- a/index.html
+++ b/index.html
@@ -352,7 +352,11 @@
                     <h2 class="contact-us-title">Підпишіться на розсилку</h2>
                     <form class="contact-us-email" autocomplete="on" novalidate>
                         <input class="contact-mail" type="email" name="email" required placeholder="E-mail" />
-                        <button class="contact-btn" type="button">Підписатися</button>
+                        <button class="contact-btn" type="button">Підписатися
+                            <svg class="contact-send" width="24" height="24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M24 0 0 13.5l7.67 2.84L19.5 5.25l-8.998 12.14.007.002-.009-.002V24l4.301-5.018L20.251 21 24 0Z" fill="#fff"/>
+                            </svg>
+                        </button>
                     </form>
                 </div>
             </div>
