--- a/portfolio.html
+++ b/portfolio.html
@@ -164,7 +164,7 @@
         </main>
         <footer class="footer-content">
             <div class="container">
-                <div class="footer-div">
+                <div>
                     <a class="logo-footer" href="index.html"><span class="web-logo">Web</span>Studio</a>
                     <address>
                         <ul class="footer-info-block">
@@ -206,6 +206,17 @@
                             </a>
                         </li>
                     </ul>
+                </div>
+                <div class="contact-us">
+                    <h2 class="contact-us-title">Підпишіться на розсилку</h2>
+                    <form class="contact-us-email" autocomplete="on" novalidate>
+                        <input class="contact-mail" type="email" name="email" required placeholder="E-mail" />
+                        <button class="contact-btn" type="button">Підписатися
+                            <svg class="contact-send" width="24" height="24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M24 0 0 13.5l7.67 2.84L19.5 5.25l-8.998 12.14.007.002-.009-.002V24l4.301-5.018L20.251 21 24 0Z" fill="#fff"/>
+                            </svg>
+                        </button>
+                    </form>
                 </div>
             </div>
         </footer>
