--- a/index.html
+++ b/index.html
@@ -374,19 +374,34 @@
                     <form class="modal-form" name="signup_form" autocomplete="on" novalidate>
                         <label>
                             Ім'я
-                            <input class="modal-input" type="name" name="name" autofocus placeholder="username" required pattern="^[a-zA-Z]+\s[a-zA-Z]+$" title="Username must be two words separated by space."/>
+                            <div class="modal-div">
+                                <input class="modal-input" type="name" name="name" autofocus placeholder="username" required pattern="^[a-zA-Z]+\s[a-zA-Z]+$" title="Username must be two words separated by space."/>
+                                <svg class="modal-icons" width="18" height="18">
+                                    <use href="./images/icons/icomoon-modal/symbol-defs.svg#person-black"></use>
+                                </svg>
+                            </div>
                         </label>
                         <label>
                             Телефон
-                            <input class="modal-input" type="tel" name="phone_number" placeholder="+380000000000" required />
+                            <div class="modal-div">
+                                <input class="modal-input" type="tel" name="phone_number" placeholder="+380000000000" required />
+                                <svg class="modal-icons" width="18" height="18">
+                                    <use href="./images/icons/icomoon-modal/symbol-defs.svg#phone-black"></use>
+                                </svg>
+                            </div>
                         </label>
                         <label>
                             Пошта
-                            <input class="modal-input" type="email" name="email" placeholder="example@gmail.com" required />
+                            <div class="modal-div">
+                                <input class="modal-input" type="email" name="email" placeholder="example@gmail.com" required />
+                                <svg class="modal-icons" width="18" height="18">
+                                    <use href="./images/icons/icomoon-modal/symbol-defs.svg#email-black"></use>
+                                </svg>
+                            </div>
                         </label>
                         <label>
                             Коментар
-                            <textarea class="modal-input" rows="5" name="feedback" placeholder="Type your message here..."></textarea>
+                            <textarea class="modal-comment" rows="5" name="feedback" placeholder="Type your message here..."></textarea>
                         </label>
                         <label class="check-box" >
                             <input type="checkbox" name="contract" required />
