--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
                     </svg>
                 </button>
                 <div class="form-group" role="group" aria-labelledby="contact-details-head">
-                    <h2 id="contact-details-head">Залиште свої дані, ми вам передзвонимо</h2>
+                    <h2 class="contact-head" id="contact-details-head">Залиште свої дані, ми вам передзвонимо</h2>
                     <form class="modal-form" name="signup_form" autocomplete="on" novalidate>
                         <label>
                             Ім'я
