--- a/index.html
+++ b/index.html
@@ -374,30 +374,30 @@
                     <form class="modal-form" name="signup_form" autocomplete="on" novalidate>
                         <label>
                             Ім'я
-                            <div class="modal-div">
-                                <input class="modal-input" type="name" name="name" autofocus placeholder="username" required pattern="^[a-zA-Z]+\s[a-zA-Z]+$" title="Username must be two words separated by space."/>
+                            <span class="modal-div">
+                                <input class="modal-input" type="text" name="user-name" autofocus title="Username must be two words separated by space."/>
                                 <svg class="modal-icons" width="18" height="18">
                                     <use href="./images/icons/icomoon-modal/symbol-defs.svg#person-black"></use>
                                 </svg>
-                            </div>
+                            </span>
                         </label>
                         <label>
                             Телефон
-                            <div class="modal-div">
+                            <span class="modal-div">
                                 <input class="modal-input" type="tel" name="phone_number" placeholder="+380000000000" required />
                                 <svg class="modal-icons" width="18" height="18">
                                     <use href="./images/icons/icomoon-modal/symbol-defs.svg#phone-black"></use>
                                 </svg>
-                            </div>
+                            </span>
                         </label>
                         <label>
                             Пошта
-                            <div class="modal-div">
+                            <span class="modal-div">
                                 <input class="modal-input" type="email" name="email" placeholder="example@gmail.com" required />
                                 <svg class="modal-icons" width="18" height="18">
                                     <use href="./images/icons/icomoon-modal/symbol-defs.svg#email-black"></use>
                                 </svg>
-                            </div>
+                            </span>
                         </label>
                         <label>
                             Коментар
