--- a/index.html
+++ b/index.html
@@ -92,9 +92,18 @@
                     <div class="container">
                         <h2 class="main-title-3">Чим ми займаємося</h2>
                         <ul class="main-img-list">
-                            <li><img class="main-img" src="images/img.jpg" alt="за ноутбуком" width="370" height="294"></li>
-                            <li><img class="main-img" src="images/img2.jpg" alt="за телефоном" width="370" height="294"> </li>
-                            <li><img class="main-img" src="images/img3.jpg" alt="за планшетом" width="370" height="294"></li>
+                            <li>
+                                <img class="main-img" src="images/img.jpg" alt="за ноутбуком" width="370" height="294">
+                                <div class="image-block"><p>Десктопні додатки</p></div>
+                            </li>
+                            <li>
+                                <img class="main-img" src="images/img2.jpg" alt="за телефоном" width="370" height="294">
+                                <div class="image-block"><p>Мобільні додатки</p></div>
+                            </li>
+                            <li>
+                                <img class="main-img" src="images/img3.jpg" alt="за планшетом" width="370" height="294">
+                                <div  class="image-block"><p>Дизайнерські рішення</p></div>
+                            </li>
                         </ul>
                     </div>
                 </section>
@@ -398,11 +407,9 @@
                             <textarea class="modal-comment" rows="5" name="feedback"></textarea>
                         </label>
                         <label class="check-box" >
-                            <svg class="check-one" width="16" height="15" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M14.222 1.667v11.666H1.778V1.667h12.444Zm0-1.667H1.778C.8 0 0 .75 0 1.667v11.666C0 14.25.8 15 1.778 15h12.444C15.2 15 16 14.25 16 13.333V1.667C16 .75 15.2 0 14.222 0Z"/></svg>
-                            <svg class="check-two" width="16" height="15" fill="none" xmlns="http://www.w3.org/2000/svg"><rect width="16" height="15" rx="2"/><path d="m3.957 7.752-.069-.066-.069.065-.888.842-.076.072.076.073 3.496 3.334.069.066.069-.066 7.504-7.158.076-.073-.076-.072-.882-.841-.069-.066-.069.066-6.553 6.246-2.539-2.422Z" fill="#fff" stroke="#fff" stroke-width=".2"/></svg>
-                            <input class="wtf" type="checkbox" name="contract" required />
-                            Погоджуюся з розсилкою та приймаю&nbsp
-                            <a href="#">Умови договору</a>
+                            <input type="checkbox" class="wtf" name="hobby" value="Погоджуюся з розсилкою та приймаю  Умови договору" />
+                            <svg class="check-one" width="16" height="15" fill="none" xmlns="http://www.w3.org/2000/svg"><rect width="16" height="15" rx="2" /><path d="m3.957 7.752-.069-.066-.069.065-.888.842-.076.072.076.073 3.496 3.334.069.066.069-.066 7.504-7.158.076-.073-.076-.072-.882-.841-.069-.066-.069.066-6.553 6.246-2.539-2.422Z" fill="#fff" stroke="#fff" stroke-width=".2"/></svg>
+                            <span class="check-span">Погоджуюся з розсилкою та приймаю  <a href="https://www.google.com/search?q=wtf&sxsrf=ALiCzsa8nXb8AdcuyVpkp3W80DnYv9Lreg:1667415855938&source=lnms&tbm=isch&sa=X&ved=2ahUKEwjSxaSOmJD7AhVpmYsKHRFgDvUQ_AUoAXoECAEQAw&biw=1440&bih=716&dpr=2">Умови договору</a></span>
                         </label>
                         <button class="modal-btn" type="submit">Відправити</button>
                     </form>
@@ -412,3 +419,4 @@
     <script src="./js/modal.js"></script>
 </body>
 </html>
+
