--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
                         </label>
                         <label class="modal-div">
                             <p class="modal-p">Коментар</p>
-                            <textarea class="modal-comment" rows="5" name="feedback"></textarea>
+                            <textarea class="modal-comment" rows="5" name="feedback" placeholder="Введіть текст"></textarea>
                         </label>
                         <label class="check-box" >
                             <input type="checkbox" class="wtf" name="hobby" value="Погоджуюся з розсилкою та приймаю  Умови договору" />
